--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Sanket",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^8.0.1",
