--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1",
     "sequelize-cli": "^6.6.0",
+    "uuid": "^11.1.0",
     "winston": "^3.8.2"
   }
 }
